Fixng css for reference tables to prevent overflows.

--- a/docs/next/styles/globals.css
+++ b/docs/next/styles/globals.css
@@ -605,3 +605,6 @@ pre[class="noop"] {
 dl, dl * {
   overflow-wrap: break-word;
 }
+td {
+  word-break:break-word
+}
